fixed style for Abut page on mobile screen

--- a/src/components/content/about/styles.module.scss
+++ b/src/components/content/about/styles.module.scss
@@ -43,6 +43,8 @@
 // small screen
 @media only screen and (max-width: 850px) {
   .title-wrapper {
+    padding-left: 5%;
+    padding-right: 5%;
     p {
       font-size: 15px;
     }
